[gd_scene load_steps=16 format=3 uid="uid://c1w6mvkqn1h1h"]

[ext_resource type="Texture2D" uid="uid://cs33jqwlnbqwa" path="res://Assets/textures/panel_brown.png" id="1_htyrx"]
[ext_resource type="Script" uid="uid://2hmc6a41fbep" path="res://CraftingSystem/crafting_menu.gd" id="1_l6puq"]
[ext_resource type="Texture2D" uid="uid://c34km7qys3bo4" path="res://Assets/textures/panelInset_beige.png" id="2_anhr5"]
[ext_resource type="FontFile" uid="uid://tddda2joxxxj" path="res://Assets/Theme/Feijoada-Regular.ttf" id="3_7xp00"]
[ext_resource type="Texture2D" uid="uid://birwqywhu75kt" path="res://Assets/textures/item_icons/multitool.png" id="4_gvcrd"]
[ext_resource type="Texture2D" uid="uid://dtexhiyqi1ct0" path="res://Assets/textures/cross.png" id="4_kn40x"]
[ext_resource type="Script" uid="uid://070oy1mtlntl" path="res://Game/Bulletin/PlayerMenus/close_button.gd" id="5_5re1m"]
[ext_resource type="Texture2D" uid="uid://7unlo2pvpffj" path="res://Assets/textures/item_icons/rope.png" id="6_l6puq"]
[ext_resource type="Texture2D" uid="uid://b71t38xsnos0a" path="res://Assets/textures/panel_blue.png" id="9_xy3d0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vcb26"]
texture = ExtResource("9_xy3d0")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cwcp5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a0a0m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bmbyy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gbewt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y25g5"]

[node name="CraftingMenuBase" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6puq")

[node name="TextureRect" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 1016.0
texture = ExtResource("1_htyrx")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 1016.0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NinePatchRect3" type="NinePatchRect" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_anhr5")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 48
patch_margin_bottom = 32

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer/NinePatchRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="CraftablesList" type="ItemList" parent="MarginContainer/HBoxContainer/MarginContainer/NinePatchRect3/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7xp00")
theme_override_font_sizes/font_size = 32
auto_width = true
auto_height = true
fixed_icon_size = Vector2i(120, 120)

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NinePatchRect2" type="NinePatchRect" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_anhr5")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 48
patch_margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="NameBox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/NameBox"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16

[node name="TagIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/NameBox/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_gvcrd")
expand_mode = 3

[node name="ItemName" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/NameBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 64
text = "Item Name"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="ItemDescription" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "I am item description 111111111111111111111111111111111111111111111111111"
autowrap_mode = 3

[node name="IconDisplay" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="TargetItemIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer/IconDisplay"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("6_l6puq")

[node name="LowerMarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/LowerMarginContainer2"]
layout_mode = 2
texture = ExtResource("2_anhr5")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/LowerMarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CraftingSlotContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/LowerMarginContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/LowerMarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 32

[node name="CraftButton" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/LowerMarginContainer2/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_vcb26")
text = "Craft"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 32

[node name="CloseButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_cwcp5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_a0a0m")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bmbyy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gbewt")
theme_override_styles/normal = SubResource("StyleBoxEmpty_y25g5")
icon = ExtResource("4_kn40x")
expand_icon = true
script = ExtResource("5_5re1m")
